@@ -1,3 +1,8 @@
+2001-08-20 Alexander Rawass <alexannika@users.sourceforge.net>
+
+	* modified configure.in.in to test for libqtreemap
+	  test may not working on some/most systems
+	
 2001-08-18 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* V1.7.8-devel
